src/objects/CPQ_Quote_RT_and_FS_mapping__mdt.object
<CustomObject>
    <description>Dynamically display the fieldset for Quote creation on the NokiaCPQ_newQuoteVF page if the Record type is selected as &apos;New QTC Quote - CPQ&apos;</description>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>Order in which Quote/Proposal record type are displayed at the time of Quote creation</description>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Set_Name__c</fullName>
        <description>Name of the Field Set mapped to the Quote/Proposal Record type</description>
        <label>Field Set Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the Record Type and Field Set mapping for the Quote/Proposal  is active?</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Name (Record Type Label) of the Quote/Proposal Record Type mapped to display lable and Field Set</description>
        <inlineHelpText>Record Type Label</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CPQ Quote RT and FS mapping</label>
    <pluralLabel>CPQ Quote RT and FS mappings</pluralLabel>
</CustomObject>